# ninjamagic-py

./: .gitignore  CLAUDE.md  compose.yaml  messages.proto  pyproject.toml  setup.md  sqlc.yaml
docs/: COMBAT_YOMI.md  Q1_ROADMAP.md  SYSTEMS.md  TODO.md
fe/: beat.html  index.html  package-lock.json  package.json  rail.html  skills.html  tsconfig.json  typing-test.html  vite.config.ts
migrations/: 000_bootstrap.sql  001_glyphs.sql  003_inventories.sql  003_items_inventories.sql  003_skills.sql  004_inventories.sql  004_inventory_owner_constraint.sql  005_key_inventory.sql  gen-migration.sh  stress.sql
ninjamagic/: act.py  admin.py  anchor.py  armor.py  auth.py  behavior.py  bus.py  cleanup.py  cli.py  client.py  clock.py  cmd.py  combat.py  commands.py  component.py  config.py  conn.py  cook.py  db.py  decay.py  demon.py  dijkstra.py  drives.py  echo.py  emit.py  experience.py  factory.py  forage.py  gas.py  inbound.py  inventory.py  item_spec.py  lag.py  main.py  mob_ai.py  move.py  nightclock.py  outbox.py  parser.py  pathfind.py  (+17 more)
scripts/: check_private_names.py  migrate.sh  seed.sh
seeds/: demo_items.sql
tests/: conftest.py  test_anchor.py  test_armor_level.py  test_auto_cap.py  test_award_caps.py  test_behavior.py  test_clock.py  test_db_skills.py  test_drives.py  test_experience_pending.py  test_goblin_den.py  test_inventory_cleanup.py  test_inventory_dirty.py  test_inventory_ids.py  test_inventory_integration.py  test_inventory_load.py  test_inventory_queries.py  test_inventory_save.py  test_inventory_schema.py  test_item_spec.py  test_mob.py  util.py  (+15 more)
(+170 files in other folders)
