[project]
name = "ninjamagic-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.3",
    "esper>=3.4",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "itsdangerous>=2.2.0",
    "numpy>=2.3.3",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
