[project]
name = "ninjamagic-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.3",
    "esper>=3.4",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "grpcio-tools>=1.75.1",
    "inflect>=7.5.0",
    "itsdangerous>=2.2.0",
    "numpy>=2.3.3",
    "protobuf>=6.32.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "language-tool-python>=2.9.4",
    "pyspellchecker>=0.8.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
    "ruff>=0.13.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
addopts = "-n 0"
